production initial commit.

--- a/dkbs-services/DKBS.API/appsettings.json
+++ b/dkbs-services/DKBS.API/appsettings.json
@@ -21,7 +21,7 @@
   "SharePointUserName": "CRM Automation",
   "SharePointPassword": "9LEkTny4",
   "SharePointListName": "Customers",
-  "SharePointIntegrationEnabled" :  "true",
+  "SharePointIntegrationEnabled" :  "false",
   "Jwt": {
     "Key": "ThisismyPrivateSecretKey",
     "Issuer": "abc.com",
