Service Catalogue API Completed

--- a/dkbs-services/DKBS.API/appsettings.json
+++ b/dkbs-services/DKBS.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DKBSConnectionString": "Server=tcp:dkbs.database.windows.net,1433;Initial Catalog=dkbs-crm-test;Persist Security Info=False;User ID=dkbs-admin;Password=AllGood357;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DKBSConnectionString": "Server=DESKTOP-V2DT05N\\SQLEXPRESS;Initial Catalog=dkbs-dev;Persist Security Info=False;User ID=sa;Password=root;MultipleActiveResultSets=False;Encrypt=false;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -21,7 +21,7 @@
   "SharePointUserName": "CRM Automation",
   "SharePointPassword": "9LEkTny4",
   "SharePointListName": "Customers",
-  "SharePointIntegrationEnabled" :  "false",
+  "SharePointIntegrationEnabled": "false",
   "Jwt": {
     "Key": "ThisismyPrivateSecretKey",
     "Issuer": "abc.com",
