Replace PartnerId to CRMPartnerId

--- a/dkbs-services/DKBS.API/appsettings.json
+++ b/dkbs-services/DKBS.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DKBSConnectionString": "Server=DESKTOP-V2DT05N\\SQLEXPRESS;Initial Catalog=dkbs-dev;Persist Security Info=False;User ID=sa;Password=root;MultipleActiveResultSets=False;Encrypt=false;TrustServerCertificate=False;Connection Timeout=30;"
+    "DKBSConnectionString": "Server=DESKTOP-V2DT05N\\SQLEXPRESS;Initial Catalog=dkbs-crm-dev;Persist Security Info=False;User ID=sa;Password=root;MultipleActiveResultSets=False;Encrypt=false;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
